[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_mainmenu_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_menu_bg"]
bg_color = Color(0.02, 0.05, 0.1, 0.96)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.13, 0.42, 0.67, 0.75)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.09, 0.17, 0.24, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.12, 0.24, 0.34, 0.98)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.16, 0.3, 0.42, 0.98)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_options_panel"]
bg_color = Color(0.01, 0.03, 0.07, 0.97)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.54, 0.77, 0.72)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 24.0
content_margin_top = 18.0
content_margin_right = 24.0
content_margin_bottom = 18.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.015, 0.03, 0.06, 1)

[node name="Root" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuPanel" type="PanelContainer" parent="Root"]
custom_minimum_size = Vector2(680, 540)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_menu_bg")

[node name="Content" type="VBoxContainer" parent="Root/MenuPanel"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="PanelTopPadding" type="Control" parent="Root/MenuPanel/Content"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2

[node name="Title" type="Label" parent="Root/MenuPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_colors/font_color = Color(0.95, 0.97, 1, 1)
text = "EVOLUTION ARENA"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Root/MenuPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.7, 0.86, 0.98, 0.95)
text = "Adapt. Survive. Evolve."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Root/MenuPanel/Content"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Root/MenuPanel/Content"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="PlayButton" type="Button" parent="Root/MenuPanel/Content/Buttons"]
custom_minimum_size = Vector2(340, 62)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Play"

[node name="OptionsButton" type="Button" parent="Root/MenuPanel/Content/Buttons"]
custom_minimum_size = Vector2(340, 62)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Options"

[node name="CreditsButton" type="Button" parent="Root/MenuPanel/Content/Buttons"]
custom_minimum_size = Vector2(340, 62)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Credits"

[node name="QuitButton" type="Button" parent="Root/MenuPanel/Content/Buttons"]
custom_minimum_size = Vector2(340, 62)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Quit"

[node name="ButtonsBottomPadding" type="Control" parent="Root/MenuPanel/Content"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="HintLabel" type="Label" parent="Root/MenuPanel/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.63, 0.77, 0.9, 0.9)
text = "Press Esc to close open panels"
horizontal_alignment = 1

[node name="PanelBottomPadding" type="Control" parent="Root/MenuPanel/Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OptionsPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(620, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -160.0
offset_right = 310.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16
theme_override_styles/panel = SubResource("StyleBoxFlat_options_panel")

[node name="OptionsContent" type="VBoxContainer" parent="OptionsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionsTopPadding" type="Control" parent="OptionsPanel/OptionsContent"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2

[node name="OptionsTitle" type="Label" parent="OptionsPanel/OptionsContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.9, 0.96, 1, 1)
text = "OPTIONS"
horizontal_alignment = 1

[node name="AudioRows" type="VBoxContainer" parent="OptionsPanel/OptionsContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SfxRow" type="HBoxContainer" parent="OptionsPanel/OptionsContent/AudioRows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SfxLabel" type="Label" parent="OptionsPanel/OptionsContent/AudioRows/SfxRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.74, 0.89, 0.98, 0.95)
text = "SFX"

[node name="SfxSlider" type="HSlider" parent="OptionsPanel/OptionsContent/AudioRows/SfxRow"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="SfxMuteToggle" type="CheckButton" parent="OptionsPanel/OptionsContent/AudioRows/SfxRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Mute"

[node name="MusicRow" type="HBoxContainer" parent="OptionsPanel/OptionsContent/AudioRows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicLabel" type="Label" parent="OptionsPanel/OptionsContent/AudioRows/MusicRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.74, 0.89, 0.98, 0.95)
text = "Music"

[node name="MusicSlider" type="HSlider" parent="OptionsPanel/OptionsContent/AudioRows/MusicRow"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.4

[node name="MusicMuteToggle" type="CheckButton" parent="OptionsPanel/OptionsContent/AudioRows/MusicRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Mute"

[node name="DifficultyRow" type="HBoxContainer" parent="OptionsPanel/OptionsContent"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="DifficultyLabel" type="Label" parent="OptionsPanel/OptionsContent/DifficultyRow"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.74, 0.89, 0.98, 0.95)
text = "Difficulty"

[node name="DifficultyOptionButton" type="OptionButton" parent="OptionsPanel/OptionsContent/DifficultyRow"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18

[node name="CloseOptionsButton" type="Button" parent="OptionsPanel/OptionsContent"]
custom_minimum_size = Vector2(220, 54)
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Close"

[node name="OptionsBottomPadding" type="Control" parent="OptionsPanel/OptionsContent"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2

[node name="DifficultyPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(720, 430)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -215.0
offset_right = 360.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 20
theme_override_styles/panel = SubResource("StyleBoxFlat_options_panel")

[node name="DifficultyContent" type="VBoxContainer" parent="DifficultyPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="DifficultyTitle" type="Label" parent="DifficultyPanel/DifficultyContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
theme_override_colors/font_color = Color(0.9, 0.96, 1, 1)
text = "SELECT DIFFICULTY"
horizontal_alignment = 1

[node name="DifficultySubtitle" type="Label" parent="DifficultyPanel/DifficultyContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.74, 0.89, 0.98, 0.95)
text = "Choose the outbreak pressure before starting the run."
horizontal_alignment = 1

[node name="DifficultyPickerRow" type="HBoxContainer" parent="DifficultyPanel/DifficultyContent"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="DifficultyLabel" type="Label" parent="DifficultyPanel/DifficultyContent/DifficultyPickerRow"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.79, 0.91, 1, 0.95)
text = "Difficulty"

[node name="DifficultyOptionButton" type="OptionButton" parent="DifficultyPanel/DifficultyContent/DifficultyPickerRow"]
custom_minimum_size = Vector2(260, 44)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22

[node name="DifficultyDescriptionPanel" type="PanelContainer" parent="DifficultyPanel/DifficultyContent"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_menu_bg")

[node name="DifficultyDescriptionPadding" type="MarginContainer" parent="DifficultyPanel/DifficultyContent/DifficultyDescriptionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 12

[node name="DifficultyDescription" type="Label" parent="DifficultyPanel/DifficultyContent/DifficultyDescriptionPanel/DifficultyDescriptionPadding"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.86, 0.95, 1, 0.97)
text = ""
autowrap_mode = 3

[node name="DifficultyButtons" type="HBoxContainer" parent="DifficultyPanel/DifficultyContent"]
layout_mode = 2
theme_override_constants/separation = 14
alignment = 1

[node name="ConfirmDifficultyButton" type="Button" parent="DifficultyPanel/DifficultyContent/DifficultyButtons"]
custom_minimum_size = Vector2(230, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Start Run"

[node name="CancelDifficultyButton" type="Button" parent="DifficultyPanel/DifficultyContent/DifficultyButtons"]
custom_minimum_size = Vector2(190, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Cancel"

[node name="CreditsPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(620, 280)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -140.0
offset_right = 310.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 20
theme_override_styles/panel = SubResource("StyleBoxFlat_options_panel")

[node name="CreditsContent" type="VBoxContainer" parent="CreditsPanel"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="CreditsTopPadding" type="Control" parent="CreditsPanel/CreditsContent"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CreditsTitle" type="Label" parent="CreditsPanel/CreditsContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.9, 0.96, 1, 1)
text = "CREDITS"
horizontal_alignment = 1

[node name="DeveloperLabel" type="Label" parent="CreditsPanel/CreditsContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.74, 0.89, 0.98, 0.95)
text = "Developer"
horizontal_alignment = 1

[node name="DeveloperNameLabel" type="Label" parent="CreditsPanel/CreditsContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_colors/font_color = Color(0.95, 0.97, 1, 1)
text = "Nylio"
horizontal_alignment = 1

[node name="CreditsSpacer" type="Control" parent="CreditsPanel/CreditsContent"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="CloseCreditsButton" type="Button" parent="CreditsPanel/CreditsContent"]
custom_minimum_size = Vector2(220, 54)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Close"

[node name="CreditsBottomPadding" type="Control" parent="CreditsPanel/CreditsContent"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
